--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,15 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://crm.chainhaus.vn/" />
-    <meta property="og:site_name" content="crm.chainhaus.vn" />
+    <meta property="og:url" content="http://crm.stdio.asia/" />
+    <meta property="og:site_name" content="crm.stdio.asia" />
     <meta property="article:publisher" content="https://www.facebook.com/codedthemes" />
     <meta property="og:title" content="Stdio CRM" />
     <meta property="og:description" content="This is CRM application for Stdio employee and developed by Stdio Team" />
     <meta property="og:image" content="%PUBLIC_URL%/og-image/og-facebook.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="http://crm.chainhaus.vn/" />
+    <meta property="twitter:url" content="http://crm.stdio.asia/" />
     <meta property="twitter:title" content="Stdio CRM" />
     <meta property="twitter:description" content="This is CRM application for Stdio employee and developed by Stdio Team" />
     <meta property="twitter:image" content="%PUBLIC_URL%/twitter-image/twitter-preview.png" />
